# marble_artifact_detection_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Artifact.msg  ArtifactArray.msg  ArtifactImg.msg  ArtifactMap.msg  ArtifactView.msg  PotentialArtifact.msg
